# BOREAL-SILICON-X1

./: .gitignore  CMakeLists.txt  README.md  SPINAL  ai_agent.py  asic_estimates.md  boreal_bridge  boreal_watchdog.v  boreal_watchdog_formal.sv  chacha20.py  compiler.py  main.c  motor_control.c  package.xml  policy_bin.h  protocol.h  requirements_traceability.md  run_demo.py  run_formal.sh  siphash.c  siphash.py  test_plan.md  vm.c
docs/: fmea.md  safety_manual.md  sil_pl_assessment.md
firmware/src/: main.c  motor_control.c  siphash.c  vm.c
hardware/formal/: boreal_watchdog.sby
policy/: policy.dsl
scripts/: ai_agent.py  boreal_bridge.py  run_demo.py
