<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boreal_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 Bridge for Boreal Hybrid Control System - Safety-Critical Robotics Interface</description>
  <maintainer email="admin@boreal.ai">Boreal Safety Team</maintainer>
  <license>Apache-2.0</license>
  <author>Boreal AI</author>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
